# vamp-investment-portfolio

./: .env.example  Cargo.toml  README.md  compose.yml
.sqlx/: query-18c109576a93def0989003569c7b7d6d81a596284347aad550aa9287d6edd609.json  query-7276b2d9dc0b2f6f34ecd8c1111e19d76afe9493b5ee822f8b1787608eef7373.json  query-a434b28a6001986eac45d4885676c6767df195a4c450cdae95077cf372181495.json  query-c7cd2860b90c168d8603c08bf6d39f324208ffbe682de1daf04afc33edfbed06.json  query-d2ac47a57ea24be1fc8242dcc3871ebf1df2f31fc724de505be3fe2d46307570.json
migrations/: .gitkeep  20260621195437_create_users.up.sql  20260621195445_create_assets.up.sql
src/: app.rs  error.rs  main.rs  models.rs  repository.rs
src/auth/: admin.rs  user.rs
src/routes/: api.rs  frontend.rs
src/routes/fixtures/: sample_assets.sql
templates/: .gitkeep  base.html  dashboard.html  login.html  register.html
